LIVE-200 Ensured roundness of circle on mobile menu, repositioned

--- a/www/app/stylus/components/navigation/_mobileMenu.styl
+++ b/www/app/stylus/components/navigation/_mobileMenu.styl
@@ -46,8 +46,9 @@
             z-index: -1;
 
             @media screen and (min-width: 600px) {
-                top: 15px;
-                width: 60%;
+                top: 23px;
+                width: 100px;
+                height: 100px;
             }
         }
     }
